syntax = "proto3";

package unit_test;

option java_multiple_files = true;
option java_package = "cn.fantasticmao.grpckit.proto";

// The greeting service definition.
service GreeterService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
}
